modified:   app/Http/Controllers/API/FilmController.php         modified:   app/Http/Controllers/API/SeatsController.php         modified:   app/Http/Controllers/API/TransactionController.php         modified:   app/Http/Controllers/Controller.php         modified:   routes/api.php         modified:   storage/api-docs/api-docs.json
